[metadata]
name = Getquantumoptics
version = 0.0.1
description = www.Getquantumoptics.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GetlinDu/Getquantumoptics
author = GetlinDu
author_email = 1578440935@qq.com
license = Apache-2.0 license
license_file = LICENSE
platforms = any

project_urls =
    Bug Tracker = https://github.com/GetlinDu/Getquantumoptics/issues
    Documentation = https://github.com/GetlinDu/Getquantumoptics/blob/master/README.md
    Source Code = https://github.com/GetlinDu/Getquantumoptics

[options]
packages = find:
install_requires =
    poppt;platform_system=='Windows'
    poword;platform_system=='Windows'
    search4file;platform_system=='Windows'
    PyOfficeRobot;platform_system=='Windows'
    rich >= 9.13.0
    you-get
    poimage
    poexcel
    pofile
    popdf
    wftools
    povideo
    poprogress
    poocr
    pocode
    poemail
    numpy

python_requires = >=3.6
include_package_data = True
zip_safe = False
